--- a/sample/src/main/res/layout/sample.xml
+++ b/sample/src/main/res/layout/sample.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".SampleActivity">
+    tools:context="com.yotadevices.rtlviewpager.sample.SampleActivity">
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tabs"
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content" />
 
 
-    <com.booking.rtlviewpager.RtlViewPager
+    <com.yotadevices.widget.rtlviewpager.RtlViewPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
