--- a/sample/src/main/res/layout/sample.xml
+++ b/sample/src/main/res/layout/sample.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"/>
 
 
-    <com.yotadevices.widget.rtlviewpager.RtlViewPager
+    <com.yotadevices.widget.RtlViewPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
